# CSErgh

./: CMakeLists.txt
Client/: CMakeLists.txt
Client/Menus/: UIManager.hpp  menu.cpp  pauseMenu.hpp  titleScreen.cpp
Client/Network/: CMakeLists.txt  Network.hpp
Client/src/: assetManager.cpp  enemy.cpp  enemy.hpp  main.cpp
Menus/: UIManager.cpp  screen.hpp
src/: UIManager.cpp  UIManager.hpp  assetManager.cpp  assetManager.hpp  enemy.hpp  game.cpp  game.hpp  main.cpp  menu.cpp  menu.hpp  pauseMenu.cpp  player.hpp  screen.hpp  titleScreen.cpp  titleScreen.hpp
